--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Optimize mobile viewport -->
 
-	<title>Node/Angular Todo App</title>
+	<title>Lindeza da titia te amo querido bjos [∞]</title>
+
+	<meta property="og:title" content="Lindeza da titia te amo querido bjos [∞]" />
+<meta property="og:type" content="article" />
+<meta property="og:image" content="http://lindezadatitia.com/img/gandolf.jpg" />
+<meta property="og:url" content="http://lindezadatitia.com" />
+<meta property="og:description" content="Lindeza da titia te amo querido bjos [∞]" />
+
 
 	<!-- SCROLLS -->
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
