--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 <meta property="og:type" content="article" />
 <meta property="og:image" content="http://lindezadatitia.com/img/gandolf.jpg" />
 <meta property="og:url" content="http://lindezadatitia.com" />
-<meta property="og:description" content="Lindeza da titia te amo querido bjos [∞]" />
+<meta property="og:description" content="Lindeza da titia te amo querido bjos [∞], faça o download do código open source https://github.com/lukcampos/lindeza-da-titia" />
 
 
 	<!-- SCROLLS -->
@@ -88,6 +88,11 @@
 							<!-- createToDo() WILL CREATE NEW TODOS -->
 							<button type="submit" class="btn btn-primary btn-lg" ng-click="createTodo()">Add +1</button>
 						</form>
+						<br/>
+						<p class="text-center">
+							lindeza da titia é open source, faça o download no <a target="_blank" href="https://github.com/lukcampos/lindeza-da-titia">GitHub</a>
+
+						</p>
 					</div>
 				</div>
 
