--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 		body {
 			padding-top: 50px;
 			background-image: url('/img/gandolf.jpg');
-			background-size: cover;
+			background-size: contain;
 		}
 
 		#todo-list {
